# lx-music-api-server

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  README_EN.md  app.py  build.py  changelog.md  clean.py  docker-compose.yml  index.html  lx-music-source-example.js  main-dev.py  main-flask.py  main.py  mkdocs.yml  package.json  pnpm-lock.yaml  poetry_run.py  pyproject.toml  requirements.txt  robots.txt  run.py  script.py  setup.py  sitemap.xml  termux.py  webui.py
.github/: dependabot.yml
api/: gcsp_handler.py  home_handler.py  music_handler.py  qmc_handler.py  script_handler.py
apis/: __init__.py
assets/: 404.html-B52eZklz.js  404.html-BoX4t3PF.js  404.html-CTkaq9qF.js  api.html-D8OJDBrf.js  api.html-DVMpWxgr.js  api.html-HY3hTcwQ.js  app-CVq7Ni1r.js  app-D0kgoHmn.js  app-Dg8Mg6dQ.js  deploy-linux.html-BkxWXAgs.js  deploy-linux.html-RPPQ2VsH.js  deploy-linux.html-cyYpQQQX.js  deploy-windows.html-BQcqmpEF.js  deploy-windows.html-DxxwITdS.js  deploy-windows.html-agylLvEo.js  index.html-BFKlvrgu.js  index.html-BoHpYDr9.js  index.html-C74gM9ui.js  index.html-Ch60ehwj.js  index.html-CiNpaWQJ.js  index.html-CtuKDaUj.js  index.html-DQduQf0Q.js  index.html-D_QKGddp.js  index.html-DhMQOp1d.js  index.html-Dlnwdrhm.js  index.html-DnS5xe-w.js  index.html-WJqXxKqp.js  style-Ca5nxn3d.css
capture/: index.html
common/: EncryptUtils.py  Httpx.py  code.py  config.py  crypt.py  default.py  default_config.py  exceptions.py  gcsp.py  localMusic.py  log.py  lx-music-source-example.js  lx_script.py  lxsecurity.py  qdes.py  request.py  scheduler.py  stats.py  utils.py  variable.py
crypt/: des.py  kuwodes.py
deploy/: deploy-linux.html  deploy-windows.html  index.html
docs/: getting-started.md  index.md  license.md  login_your_account.md  project-license.md
src/: README.md
(+136 files in other folders)
