[project]
name = "lx-music-api-server"
version = "2.0.2"
description = "LX Music Api Server"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ujson (>=5.10.0,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pycryptodome (>=3.22.0,<4.0.0)",
    "xmltodict (>=0.14.2,<0.15.0)",
    "redis (>=5.2.1,<6.0.0)",
    "cryptography (>=44.0.3,<45.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "httpx[h2] (>=0.28.1,<0.29.0)",
    "rich (>=14.1.0,<15.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
